# perceptor

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  pixray.py  pyproject.toml  test_replace_velocity.py
docs/source/: conf.py  index.rst  perceptor.drawers.rst  perceptor.losses.rst  perceptor.models.rst  perceptor.models.stable_diffusion.rst  perceptor.transforms.rst  perceptor.utils.rst
perceptor/: __init__.py
perceptor/drawers/: __init__.py  deep_image_prior.py  interface.py  pixel.py  stylegan_xl.py
perceptor/drawers/diffusion/: __init__.py  brute_diffusion.py  cc12m_1.py  diffusion-old.py  diffusion.py  diffusion_idea.py  diffusion_original.py  model_urls.py  pseudo_linear_sampler.py  sample.py  sampling.py  utils.py  yfcc_1.py
perceptor/drawers/jpeg/: __init__.py  compression.py  decompression.py  jpeg.py  utils.py
perceptor/drawers/raw/: __init__.py  raw.py
perceptor/drawers/rudalle/: __init__.py  brute_rudalle.py  get_vae.py
perceptor/init/: __init__.py  fractal.py  gradient.py
perceptor/losses/: __init__.py  aesthetic.py  aesthetic_visual_assessment.py  blip.py  clip.py  cloob.py  diffusion.py  lit.py  lpips.py  memorability.py  midas_depth.py  open_clip.py  owlvit.py  resize.py  ruclip.py  simulacra_aesthetic.py  slip.py  spherical_distance.py  style_transfer.py  velocity_diffusion.py
perceptor/losses/blip/: blip.py  blip_base.py
perceptor/losses/clip/: clip.py  clip_base.py
perceptor/losses/super_resolution/: __init__.py  discriminator.py  super_resolution.py  unet_discriminator_sn.py
perceptor/models/: __init__.py  clip.py  open_clip.py  openclip.py  simulacra_aesthetic.py  transformers_openai_clip.py
perceptor/models/adabins_depth/: __init__.py  adabins_depth.py  infer.py  model_io.py
perceptor/models/blip/: blip.py  blip_base.py  blip_itm.py
perceptor/models/clip/: __init__.py  clip.py  clip_base.py
perceptor/models/clip_segmentation/: clip_segmentation.py
perceptor/models/cloob/: LICENSE  __init__.py  cloob.py  model_pt.py  pretrained.py
perceptor/models/deep_image_prior/: LICENSE  __init__.py  common.py  deep_image_prior.py  get_hq_skip_net.py  resnet.py  skip.py  texture_nets.py  unet.py  updown.py
perceptor/models/glide_clip/: __init__.py  encoders.py  glide_clip.py  model_creation.py
perceptor/models/guided_diffusion/: __init__.py  create_models.py  fp16_util.py  gaussian_diffusion.py  guided_diffusion.py  nn.py  predictions.py  smaller_diffusion_model.py  unet.py
perceptor/models/k_diffusion/: __init__.py  diffusion.py  k_diffusion.py  prediction.py  standardize.py
perceptor/models/latent_diffusion/: __init__.py  face.py  finetuned_text2image.py  latent_diffusion.py  noise_lens.py  noise_lens_old1.py  noise_lens_old2.py  super_resolution.py  super_resoution.py  text2image.py
perceptor/models/owlvit/: __init__.py  (+3 more)
perceptor/transforms/: __init__.py  clamp_with_grad.py  diffusion.py  dynamic_threshold.py  super_resolution.py
perceptor/utils/: __init__.py  cache.py  gradient_checkpoint.py  pil_image.py
pixray/init/: __init__.py
pixray/losses/: interface.py  smoothness.py
pixray/transforms/: __init__.py  clamp_with_grad.py  interface.py
(+120 files in other folders)
