[tool.poetry]
name = "perceptor"
version = "0.1.0"
description = ""
authors = ["dribnet", "Richard Löwenström <samedii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.8"
torch = "^1.11.0"
torchvision = "^0.12.0"
numpy = "^1.22.2"
tqdm = "^4.62.3"
einops = "^0.4.0"
imageio = "^2.14.1"
kornia = "^0.6.3"
Pillow = "^9.0.1"
clip = {git = "https://github.com/openai/CLIP.git", rev = "40f5484c1c74edd83cb9cf687c6ab92b28d8b656"}
timm = "^0.5.4"
perlin-numpy = {git = "https://github.com/pvigier/perlin-numpy", rev = "6f077f811f5708e504732c26dee8f2015b95da0c"}
resmem = "^1.1.4"
basicsr = "1.3.4.9"
opencv-python = "^4.5.5"
taming-transformers = {git = "https://github.com/bfirsh/taming-transformers.git", rev = "7a6e64ee27f251afbd965c3e06bbd14972116cc1"}
transformers = "^4.16.2"
ftfy = "^6.0.3"
omegaconf = "^2.1.1"
youtokentome = "^1.0.6"
more-itertools = "^8.12.0"
open-clip = {git = "https://github.com/mlfoundations/open_clip.git", rev = "bc8b3a23ce790bd15b70bfd7cc0773629f2c68f7"}
dill = "^0.3.4"
ninja = "^1.10.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.8.0"
pytest = "^7.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
poethepoet = "^0.12.2"
ipywidgets = "^7.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
cuda11 = "poetry run python -m pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchaudio==0.10.1+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".venv __pycache__ .git .pytest_cache"
testpaths = [
    "tests",
]
python_files = "*.py"
